<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    
      <LinearLayout
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    
    <Button 
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height ="wrap_content"
        android:text= "@string/btn_instructions"/>
    
    
    </LinearLayout>

     <LinearLayout
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Spinner
        android:id="@+id/nJoueur"
        android:layout_width="96dp"
        android:layout_height="36dp" />
    
    <Button 
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height ="wrap_content"
        android:text= "@string/btn_reset"/>
    
    
    </LinearLayout>

    <LinearLayout
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
             android:id="@+id/joueur1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="45dp"
            android:text="@string/J1" />

        <TextView
            android:id="@+id/joueur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/J2" />
    </LinearLayout>
   <LinearLayout
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
             android:id="@+id/joueur3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="45dp"
            android:text="@string/J3" 
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/joueur4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/J4" 
            android:visibility="invisible"/>
    </LinearLayout>  

    <RadioGroup
        android:id="@+id/radioLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp" >

        <RadioButton
            android:id="@+id/radioO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/radio_o" />

        <RadioButton
            android:id="@+id/radioS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_s" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button4"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button5"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button8"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button11"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button12"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button14"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button15"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button18"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button19"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button21"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button22"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button25"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button26"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button27"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button28"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button29"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button30"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button31"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button32"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button33"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button34"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button35"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button36"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button37"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button38"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button39"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button40"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button41"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button42"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button43"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button44"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button45"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button46"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button47"
           android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button48"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button49"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/btn_default"
            android:textSize="15sp" />
    </LinearLayout>
    
</LinearLayout>